fixed css issues on mobile viewport

--- a/REST/View/Chat/css/chats.css
+++ b/REST/View/Chat/css/chats.css
@@ -108,12 +108,12 @@
     flex-direction: column;
     align-items: flex-start;
 
-    margin-top: 1rem;
-
     width: 95%;
     height: 100%;
 
     background-color: transparent;
+
+    overflow-y: scroll;
 
     box-sizing: border-box;
 }
