--- a/REST/View/Owner/css/friends.css
+++ b/REST/View/Owner/css/friends.css
@@ -1,3 +1,7 @@
+#friends-div {
+    max-height: 100svh;
+    overflow-y: scroll;
+}
 #friends-div-title {
     position: absolute;
 
