--- a/REST/View/Reset/css/index.css
+++ b/REST/View/Reset/css/index.css
@@ -111,7 +111,7 @@ button:hover {
     flex-direction: column;
 
     min-width: 270px;
-    width: 25vw;
+    width: 20vw;
     height: 80svh;
 
     padding: 1rem;
